@startuml Class_Diagram_UML
skinparam style strictuml
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.2
skinparam ArrowColor #red
hide empty members

package Cards
{
    abstract class Card
    {
        -imageIcon : String
        -message : String
        -type : String

        Cards.Card(type,message,icon : String)
        +GetType() : String
        +GetImage() : String
        +GetMessage() : String
        +{abstract} Action(board:Board, player:Player) : void
    }
    Card --* Model.Board
    Card -- Model.Player

    class DealCard extends Card
    {
        -cost : double
        -value : double
        -choise1 : String
        -choise2 : String

        +DealCard(type,message:String, cost,value : float, icon,choise1,choise2:String)
        +GetChoise(choise : int) : String
        +GetCost() : float
        +GetValue() : float
        +Action(board:Board, player:Player) : void
    }

    abstract class MailCard extends Card
    {
        choise : String
        euro : float

        MailCard(type,message,choise:String, euro:float, icon : String)
        +GetEuro() : float
        +GetChoise() : String
    }

    class PayTheNeighborCard extends MailCard
    {
        +PayTheNeighborCard(type,message,choise:String, euro:float, icon : String)    
        +Action(board:Board, player:Player) : void

    }

    class MadMoneyCard extends MailCard
    {
        +MadMoneyCard(type,message,choise:String, euro:float, icon : String)
        +Action(board:Board, player:Player) : void            
    }

    class CharityCard extends MailCard
    {
        +CharityCard(type,message,choise:String, euro:float, icon : String)
        +Action(board:Board, player:Player) : void            
    }

    class BillCard extends MailCard
    {
        +BillCard(type,message,choise:String, euro:float, icon : String)
        +Action(board:Board, player:Player) : void            
    }

    class MoveToDealBuyerCard extends MailCard
    {
        +MoveToDealBuyerCard(type,message,choise:String, euro:float, icon : String)
        +Action(board:Board, player:Player) : void            
    }

    class AdvertisementCard extends MailCard
    {
        +AdvertisementCard(type,message,choise:String, euro:float, icon : String)
        +Action(board:Board, player:Player) : void            
    }
}

@enduml